historical + horror_thriller

--- a/priv/rules/historical.yml
+++ b/priv/rules/historical.yml
@@ -9,7 +9,7 @@
   metadata:
     title_ru: Уроки истории
     text_ru: История может быть захватывающей... Вот только не стоит учить ее по аниме.
-    image: /assets/achievements/anime/historical_1.png
+    image: /assets/achievements/anime/historical_1.jpg
     border_color: "#3c3949"
     topic_id: 222065
 
