--- a/priv/rules/horror_thriller.yml
+++ b/priv/rules/horror_thriller.yml
@@ -10,6 +10,7 @@
   metadata:
     title_ru: Смерть дышит в спину
     text_ru: Практически всё в этом мире умирает. В этом мире жизнь — всего лишь незначительная частичка, не более чем секундное явление. Смерть повсеместна.
+    image: /assets/achievements/anime/horror_thriller_1.jpg
     image: http://i.imgur.com/NEaqM1P.png?1
     border_color: "#ddc49c"
     topic_id: 227420
@@ -20,6 +21,7 @@
   metadata:
     title_ru: Ночной кошмар
     text_ru: Птицей Гермеса меня называют, крылья свои пожирая, сам я себя укрощаю.
+    image: /assets/achievements/anime/horror_thriller_2.png
     image: http://i.imgur.com/GHJ7R6m.png?1
     border_color: "#510a0b"
 
@@ -30,6 +32,7 @@
     title_ru: Все чудовища — это люди
     text_ru: Только люди могут смотреть на убийство себе подобных ради развлечения.
     title_en: All monsters are human
+    image: /assets/achievements/anime/horror_thriller_3.png
     image: http://i.imgur.com/hWxL0YZ.png?1
     border_color: "#d7adb1"
 
@@ -39,5 +42,6 @@
   metadata:
     title_ru: Hell
     text_ru: Смотри! Внутри меня ничего нет — там пустота, я даже боль не чувствую.
+    image: /assets/achievements/anime/horror_thriller_4.png
     image: http://i.imgur.com/p5kn96D.gif?1
     border_color: "#2a2a2a"
