--- a/priv/rules/supernatural.yml
+++ b/priv/rules/supernatural.yml
@@ -37,5 +37,5 @@
   metadata:
     title_ru: Унесённые призраками
     text_ru: Если забудешь своё имя, то не сможешь вернуться домой.
-    image: /assets/achievements/anime/supernatural_4.gif
-    border_color: "#42a89a"
+    image: https://i.imgur.com/Na0j4x3.gif
+    border_color: "#800000"
