--- a/priv/rules/military.yml
+++ b/priv/rules/military.yml
@@ -37,7 +37,6 @@
   metadata:
     title_ru: Генерал
     text_ru: |-
-      Не стоит связываться с кадровым офицером, прошедшим горячие точки.
-      Жизни тысяч в руках одного.
+      Запах напалма по утру вам нравится больше чем аниме.
     image: /assets/achievements/anime/military_4.gif
     border_color: "#2a456e"
