--- a/priv/rules/mecha.yml
+++ b/priv/rules/mecha.yml
@@ -27,7 +27,7 @@
   threshold: 140
   metadata:
     title_ru: Ньютайп
-    text_ru: Ore Wa Gundam / I am a mecha
+    text_ru: Ore Wa Gundam
     image: /assets/achievements/anime/mecha_3.png
     border_color: "#66cdaa"
 
