--- a/priv/rules/seinen.yml
+++ b/priv/rules/seinen.yml
@@ -39,5 +39,5 @@
   metadata:
     title_ru: Быть человеком
     text_ru: Если у вас нет ста пушек в руках и одной в сердце, то дальнейший просмотр становиться рискованным.
-    image: https://a.radikal.ru/a39/1802/ab/0c39c8d74061.gif
+    image: /assets/achievements/anime/seinen_4.gif
     border_color: "#5F9EA0"
