--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -16,7 +16,7 @@
   metadata:
     title_ru: Это всего лишь начало
     text_ru: Ставки начинают расти. Кто-то уже сдался, но вы... Вы ещё в строю.
-    image: https://c.radikal.ru/c28/1802/2e/05d9c7906389.png
+    image: /assets/achievements/anime/animelist_2.png
     border_color: "#A5260A"
 
 - <<: *defaults
@@ -67,7 +67,7 @@
   metadata:
     title_ru: Сатанинский предел?
     text_ru: Стремишься стать частью той силы, что вечно хочет зла и вечно совершает благо? Что ж, только внимательно читай те условия контракта, что мелким шрифтом.
-    image: https://moe.shikimori.org/system/user_images/original/34807/489472.jpg
+    image: /assets/achievements/anime/animelist_9.jpg
     border_color: "#AB274F"
 
 - <<: *defaults
@@ -76,7 +76,7 @@
   metadata:
     title_ru: Это даже не финальная форма
     text_ru: Ваш единственный путь — вверх. Пора учиться доброй снисходительности.
-    image: http://www.gamingilluminaughty.com/wp-content/uploads/2016/10/maxresdefault-2-4.jpg
+    image: /assets/achievements/anime/animelist_10.jpg
     border_color: "#434B4D"
 
 - <<: *defaults
@@ -85,7 +85,7 @@
   metadata:
     title_ru: Бесконечное путешествие
     text_ru: У каждого человека свои звезды. Одним - тем, кто странствует, - они указывают путь. Для других это просто маленькие огоньки. Дорога вперед бесконечна. Хотите ли вы продолжать идти по ней?
-    image: https://kawai.shikimori.org/system/user_images/original/34807/484406.jpg
+    image: /assets/achievements/anime/animelist_11.jpg
     border_color: "#002F55"
 
 - <<: *defaults
@@ -101,28 +101,28 @@
   level: 13
   threshold: 1234
   metadata: {}
-  
+
 - <<: *defaults
   level: 14
   threshold: 1500
   metadata:
     title_ru: Маньяк
     text_ru: Это так круто? Возможно вам следует обратиться к врачу.
-    image: /assets/achievements/anime/animelist_13.jpg
+    image: /assets/achievements/anime/animelist_14.jpg
     border_color: "#C5D0E6"
 
 - <<: *defaults
   level: 15
   threshold: 2000
   metadata: {}
-  
+
 - <<: *defaults
   level: 16
   threshold: 2500
   metadata:
     title_ru: Знать
     text_ru: Вы - вершина общества, сливки из сливок, объект зависти и восхищения. И пусть чернь склонится перед Вашим Величеством!
-    image: https://kawai.shikimori.org/system/user_images/original/34807/483211.jpg
+    image: /assets/achievements/anime/animelist_16.jpg
     border_color: "#FCE883"
 
 - <<: *defaults
@@ -135,18 +135,16 @@
   threshold: 5000
   metadata:
     title_ru: Герой
-    text_ru: 
-    image: /assets/achievements/anime/animelist_13.jpg
-    border_color: "#C5D0E6"
-    
-    - <<: *defaults
+    text_ru:
+
+- <<: *defaults
   level: 19
   threshold: 7500
-  metadata: 
+  metadata:
     title_ru: Легенда
     text_ru: Вы один из избранных. Вам уже даже не нужно хвастаться, потому что все и так слышали о вас.
-  
-  - <<: *defaults
+
+- <<: *defaults
   level: 20
   threshold: 10000
   metadata: {}
