--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -108,7 +108,7 @@
   metadata:
     title_ru: Маньяк
     text_ru: Это так круто? Возможно вам следует обратиться к врачу.
-    image: /assets/achievements/anime/animelist_14.jpg
+    image: https://desu.shikimori.org/system/user_images/original/7642/546833.jpg
     border_color: "#c5d0e6"
 
 - <<: *defaults
