--- a/priv/rules/scifi.yml
+++ b/priv/rules/scifi.yml
@@ -8,7 +8,7 @@
       - 24
   metadata:
     title_ru: Давным-давно, в далекой-далекой галактике...
-    text_ru: Как только ты сделаешь первый шаг по Тёмному Пути, ты уже не сможешь с него свернуть.
+    text_ru: Как только первый шаг сделаете вы по Тёмному Пути, то свернуть уже не сможете с него.
     image: /assets/achievements/anime/scifi_1.jpg
     border_color: "#923a6c"
     topic_id: 222059
