--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -111,7 +111,7 @@
     title_ru: Маньяк
     text_ru: Это так круто? Возможно вам следует обратиться к врачу.
     image: /assets/achievements/anime/animelist_14.jpg
-    border_color: "#c5d0e6"
+    border_color: "#ED3CCA"
 
 - <<: *defaults
   level: 15
