--- a/priv/rules/longshounen.yml
+++ b/priv/rules/longshounen.yml
@@ -6,15 +6,15 @@
   filters:
     episodes_gte: 100
   metadata:
-    title_ru: Хокаге
-    text_ru: 100 эпизодов для вас не проблема.
-    image: http://i.imgur.com/ktKNeQO.png
-    border_color: "#da7f51"
+    title_ru: Марафонец
+    text_ru: 10, 20, 30... 100 эпизодов! Я только разогреваюсь!
+    image: /assets/achievements/anime/longshounen_1.jpg
+    border_color: "#A25F2A"
     topic_id: 227422
 
 - <<: *defaults
   level: 2
   threshold: 25
   metadata:
-    title_ru: Марафонец
-    text_ru: 10, 20, 30... 100 эпизодов! Я только разогреваюсь!
+    title_ru: 
+    text_ru:
