--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -50,8 +50,8 @@
   level: 6
   threshold: 300
   metadata:
-    title_ru: Знаток
-    text_ru: Сидя в удобном кресле, задрав ноги, пьете вино и смотрите скачанное на днях аниме. Это блаженство, так ведь?
+    title_ru: Эстет
+    text_ru:  Удобно развалившись в кресле, вы наслаждаетесь просмотром аниме. Качественная графика, прекрасное музыкальное сопровождение, интересные сюжеты... эти японские мультики весьма хороши.
 
 - <<: *defaults
   level: 7
@@ -122,7 +122,9 @@
 - <<: *defaults
   level: 15
   threshold: 2000
-  metadata: {}
+  metadata: 
+    title_ru: Мастер
+    text_ru: Мастер познается в самоограничении.
 
 - <<: *defaults
   level: 16
